samples/_failures_safe/1761165420_692dea_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_15c0291b.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_15c0291b.c:157:17: error: expected expression at end of input
  157 |                 if (new_dist < dist[dest_id])
      |                 ^~
./samples/SAFE/__tmp_15c0291b.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15c0291b.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15c0291b.c:157:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_15c0291b.c:157:17: error: expected declaration or statement at end of input
